[package]
name = "tiny_ebnf_grammar_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["derive"] }
dotenv = "0.15.0"
fern = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.19"
pest = { git = "https://github.com/0nyr/pest.git", branch = "master" }
pest_derive = "2.7.0"
